weird bug w logo covering back button
fixed

--- a/stylesheets/sass/56.scss
+++ b/stylesheets/sass/56.scss
@@ -119,12 +119,15 @@ canvas {
 }
 
 .logo {
-    width: 100%;
-    height: 60px;
-    @include boxflex;
     position: fixed;
-    top: 0;
-    left: 0;
+    top: 30px;
+    left: 50%;
+    width: auto;
+    -webkit-transform: translateX(-50%);
+    -moz-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
+    -o-transform: translateX(-50%);
+    transform: translateX(-50%);
     z-index: 300;
 }
 
@@ -320,7 +323,7 @@ canvas {
     top: 20px;
     left: 20px;
     cursor: w-resize;
-    z-index: 300;
+    z-index: 600;
     font-family: $type-2;
     font-size: $type-size-1;
 }
